cabal-version:       2.4
name:                aoc2019-hs
version:             0.1.0.0
synopsis:            Advent of Code 2019 solutions in Haskell
author:              Sam Cappleman-Lynes
maintainer:          sam.capplemanlynes@gmail.com
build-type:          Simple

library
    exposed-modules:  Advent,
                      Advent.Intcode

    build-depends:    base        ^>= 4.12,
                      containers  ^>= 0.6,
                      megaparsec  ^>= 8.0,
                      mtl         ^>= 2.2

    hs-source-dirs:   common
    default-language: Haskell2010

executable Day01
    main-is:             Day01.hs
    build-depends:       aoc2019-hs, base
    hs-source-dirs:      execs
    default-language:    Haskell2010

executable Day02
    main-is:             Day02.hs
    build-depends:       aoc2019-hs, base, containers
    hs-source-dirs:      execs
    default-language:    Haskell2010

executable Day03
    main-is:             Day03.hs
    build-depends:       aoc2019-hs, base, containers, megaparsec
    hs-source-dirs:      execs
    default-language:    Haskell2010

executable Day04
    main-is:             Day04.hs
    build-depends:       aoc2019-hs, base, megaparsec
    hs-source-dirs:      execs
    default-language:    Haskell2010

executable Day05
    main-is:             Day05.hs
    build-depends:       aoc2019-hs, base
    hs-source-dirs:      execs
    default-language:    Haskell2010

executable Day06
    main-is:             Day06.hs
    build-depends:       aoc2019-hs, base, containers, megaparsec
    hs-source-dirs:      execs
    default-language:    Haskell2010

executable Day07
    main-is:             Day07.hs
    build-depends:       aoc2019-hs, base
    hs-source-dirs:      execs
    default-language:    Haskell2010

executable Day08
    main-is:             Day08.hs
    build-depends:       aoc2019-hs, base, megaparsec
    hs-source-dirs:      execs
    default-language:    Haskell2010

executable Day09
    main-is:             Day09.hs
    build-depends:       aoc2019-hs, base
    hs-source-dirs:      execs
    default-language:    Haskell2010

executable Day10
    main-is:             Day10.hs
    build-depends:       aoc2019-hs, base, containers, megaparsec
    hs-source-dirs:      execs
    default-language:    Haskell2010

executable Day11
    main-is:             Day11.hs
    build-depends:       aoc2019-hs, base, containers
    hs-source-dirs:      execs
    default-language:    Haskell2010
